[package]
name = "halo2-mpt-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = "2.0.7"
itertools = "0.10.5"
hash-circuit = { package = "poseidon-circuit", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "sync-ff-0.13" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
rand = "0.8"
lazy_static = "1.4.0"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
num-bigint = "0.4"
hex = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9.0"
# mpt-zktrie = { git = "https://github.com/scroll-tech/zkevm-circuits.git", rev = "7d9bc181953cfc6e7baf82ff0ce651281fd70a8a" }
rand_chacha = "0.3.0"
criterion = { version = "0.4", optional = true}

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-ff-0.13" }
[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7",  features = ["scroll"] }

[features]
# printout the layout of circuits for demo and some unittests
print_layout = ["halo2_proofs/dev-graph"]
default = ["halo2_proofs/mock-batch-inv", "halo2_proofs/parallel_syn"]
bench = ["dep:criterion"]

[dev-dependencies]
mpt-zktrie = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "sync-ff-0.13" }
# mpt-zktrie = { path = "../scroll-circuits/zktrie" }
plotters = "0.3"
bencher = "0.1"
subtle = "2"

[[bin]]
name = "integration-test"
path = "integration-tests/src/main.rs"

[profile.test]
opt-level = 3
debug-assertions = true

[[bench]]
name = "parallel_assignment"
harness = false
required-features = ["bench"]
